crates/dekaf/tests/snapshots/dekaf_schema_test__deletions-1.snap
---
source: crates/dekaf/tests/dekaf_schema_test.rs
expression: doc?
---
Record(
    [
        (
            "key",
            String(
                "second",
            ),
        ),
        (
            "_meta",
            Record(
                [
                    (
                        "op",
                        Union(
                            0,
                            String(
                                "d",
                            ),
                        ),
                    ),
                    (
                        "_flow_extra",
                        Map(
                            {},
                        ),
                    ),
                ],
            ),
        ),
        (
            "flow_published_at",
            Union(
                0,
                Record(
                    [
                        (
                            "json",
                            String(
                                "null",
                            ),
                        ),
                    ],
                ),
            ),
        ),
        (
            "_is_deleted",
            Long(
                1,
            ),
        ),
    ],
)
