crates/dekaf/tests/snapshots/dekaf_schema_test__old-deletions-0.snap
---
source: crates/dekaf/tests/dekaf_schema_test.rs
expression: doc?
---
Record(
    [
        (
            "_meta",
            Record(
                [
                    (
                        "is_deleted",
                        Long(
                            0,
                        ),
                    ),
                    (
                        "op",
                        Union(
                            0,
                            String(
                                "c",
                            ),
                        ),
                    ),
                    (
                        "_flow_extra",
                        Map(
                            {},
                        ),
                    ),
                ],
            ),
        ),
        (
            "key",
            String(
                "first",
            ),
        ),
        (
            "_flow_extra",
            Map(
                {},
            ),
        ),
    ],
)
